--- a/plugin/adCountdown.css
+++ b/plugin/adCountdown.css
@@ -1,3 +1,15 @@
+/* * The body style is just for the
+ * background color of the codepen.
+ * Do not include in your code.
+ */
+body {
+  background-color: #111;
+  color: #fff;
+}
+/*
+ * Styles essential to the sample
+ * are below
+ */
 /* Size the video */
 .video-js {
   width: 640px;
